--- a/frontend/public/global.css
+++ b/frontend/public/global.css
@@ -16,3 +16,7 @@ h2 {
 p {
   @apply text-base
 }
+
+input {
+  @apply shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight
+}
