--- a/frontend/public/global.css
+++ b/frontend/public/global.css
@@ -20,3 +20,11 @@ p {
 input {
   @apply shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight
 }
+
+textarea {
+  @apply shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight
+}
+
+button {
+  @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded
+}
